--- a/#sourse/scss/style.scss
+++ b/#sourse/scss/style.scss
@@ -8,9 +8,6 @@ body:has(.open) {
 .wrapper {
 	font-family: "Montserrat";
 }
-.header {
-	background: hotpink;
-}
 .footer {
 	background: hotpink;
 }
